--- a/uwthesis.tex
+++ b/uwthesis.tex
@@ -218,7 +218,7 @@ Thank you to my friends for the joy and laughter in the journey.
 \input{PLink365.tex}
 \input{EvaluationPHub.tex}
 \input{EvaluationPLink.tex}
-\input{EvaluationPLinkCollectives}
+\input{EvaluationPLinkCollectives.tex}
 \input{Conclusion.tex}
 
 \bibliographystyle{plain}
