--- a/EvaluationPLinkCollectives.tex
+++ b/EvaluationPLinkCollectives.tex
@@ -31,7 +31,7 @@ We evaluate \cmpi{}'s efficacy with microbenchmarks of algorithms introduced in~
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=\linewidth]{Figures/collectivesperformance.png}
+    \includegraphics[width=0.7\linewidth]{Figures/collectivesperformance.png}
     \caption{Speedups achieved by just using the rank ordering produced by our tool in various algorithms across multiple distributed communication backends at a large scale.}
     \label{fig:cccollectivesPerformance}
 \end{figure}
