--- a/PLink.tex
+++ b/PLink.tex
@@ -53,6 +53,7 @@ Even with careful mapping, not all algorithms work optimally in the datacenter e
 
 \begin{table}[ht]
 	\centering
+    \footnotesize
 	\begin{tabular}{|c|c|c|c|}
 		\hline 
 		Name & Rounds/Hops & Bytes on Wire & XR Bytes \\
@@ -297,7 +298,7 @@ The last step of a schedule is Deliver, where \ha copies the final value to the 
 
 \begin{table}[t]
 	\centering
-	\small
+    \footnotesize
 	%\footnotesize
 	\begin{tabular}{|c|c|}
 		\hline 
