--- a/background.tex
+++ b/background.tex
@@ -1,5 +1,5 @@
 \section{Background}
-We now establish conventions used in this paper, and familiarize the reader with basic concepts for distributed training.
+We now establish conventions used in this paper, and familiarize the reader with basic concepts of distributed training.
 
 
 \subsection{Training a ML model}
@@ -33,7 +33,7 @@ We focus on synchronous training due to its simplicity and commonality in indust
 
 \begin{figure}[t!]
 	\centering
-	\includegraphics[width=\linewidth, trim=2 3 3 3,clip]{Figures/aggregationapproaches.pdf}
+	\includegraphics[width=.7\linewidth, trim=2 3 3 3,clip]{Figures/aggregationapproaches.pdf}
 	\caption{Aggregation is commonly done with one of the three prevailing paradigms, parameter server, collectives all-reduce, and hierarchical aggregation in practice.}
 	\label{fig:aggregationapproaches}
 \end{figure}
