--- a/introduction.tex
+++ b/introduction.tex
@@ -6,6 +6,7 @@ Traditionally, training has been viewed as a compute-bound problem, best done in
 
 \begin{table}
 \centering
+\footnotesize
 \begin{tabular}{|c|c|c|c|c|}
   \hline
   Models & Complexity & Size & Time & Configuration \\
